Nav Bar Component

--- a/src/stylesheets/_variable.scss
+++ b/src/stylesheets/_variable.scss
@@ -1,3 +1,12 @@
 @charset "UTF-8";
 
 $menu-width: 150px;
+
+$primary-color: #349F5D;
+$border-color: #dcdcdc;
+
+$primary-orange: #FF6000;
+$secondary-yellow: #FFA800;
+$success-green: #1dc765;
+$info-blue: #0db6e0;
+$info-purple: #D672F8;
