Enhance Nav Bar

--- a/src/stylesheets/_variable.scss
+++ b/src/stylesheets/_variable.scss
@@ -5,8 +5,9 @@ $menu-width: 150px;
 $primary-color: #349F5D;
 $border-color: #dcdcdc;
 
-$primary-orange: #FF6000;
-$secondary-yellow: #FFA800;
-$success-green: #1dc765;
-$info-blue: #0db6e0;
-$info-purple: #D672F8;
+$orange: #FF7915;
+$yellow: #FFA006;
+$green: #00CA98;
+$blue: #00A8ED;
+$purple: #DC71F5;
+$red: #FF6E67;
