--- a/src/stylesheets/elements/_btn.scss
+++ b/src/stylesheets/elements/_btn.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import "../_variable.scss";
 
 .btn {
     font-family: inherit;
@@ -18,4 +19,66 @@
         background-image: -webkit-linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));
         background-image: linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));
     }
+}
+
+// color
+.btn-error,
+.btn-secondary,
+.btn-success,
+.btn-warning {
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.btn-success {
+    background: $green;
+}
+
+.btn-error {
+    background: $red;
+}
+
+.btn-warning {
+    background: $yellow;
+}
+
+.btn-secondary {
+    background: $blue;
+}
+
+// size
+.btn-xsmall {
+    font-size: 70%;
+}
+
+.btn-small {
+    font-size: 85%;
+}
+
+.btn-large {
+    font-size: 120%;
+}
+
+.btn-xlarge {
+    font-size: 135%;
+}
+
+// special
+.btn-search {
+  float: right;
+  width: 2rem;
+  background-color: #ffa800;
+}
+
+.btn-manual {
+  width: 2.3rem;
+  padding-left: .8rem;
+  background-color: #265b86;
+  background-image: url('./assets/icon-manual.png') !important;
+  background-repeat: no-repeat;
+  background-size: 20%;
+  background-position: .2rem center;
+  color: #FFF;
+  line-height: 1.4;
 }
