--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -43,7 +43,7 @@ body {
 body {
     margin: 0;
     font-size: 14px;
-    font-family: "Times New Roman", "Microsoft YaHei", STXihei, serif;
+    font-family: Helvetica, "Microsoft YaHei", STXihei, serif;
     color: #777;
 }
 
