--- a/src/style/elements/_btn.scss
+++ b/src/style/elements/_btn.scss
@@ -81,3 +81,127 @@
   color: #FFF;
   line-height: 1.4;
 }
+
+// switch
+.switch {
+   position: relative;
+   height: 26px;
+   width: 120px;
+   background: rgba(77,68,68,.25);
+   border-radius: 3px;
+   box-shadow: inset 0 1px 3px rgba(0,0,0,.3),0 1px rgba(255,255,255,.1)
+}
+
+.switch-label {
+   position: relative;
+   z-index: 2;
+   float: left;
+   width: 58px;
+   line-height: 26px;
+   font-size: 11px;
+   color: #FFF;
+   text-align: center;
+   text-shadow: 0 1px 1px rgba(0,0,0,.45);
+   cursor: pointer
+}
+
+.switch-label-off {
+   padding-left: 2px
+}
+
+.switch-label-on {
+   padding-right: 2px
+}
+
+.switch-input {
+   display: none
+}
+
+.switch-input:checked+.switch-label {
+   color: #EEE;
+   text-shadow: 0 1px rgba(255,255,255,.25);
+   -webkit-transition: .15s ease-out;
+   transition: .15s ease-out
+}
+
+.switch-input:checked+.switch-label-on~.switch-selection {
+   left: 60px
+}
+
+.switch-selection {
+   display: block;
+   position: absolute;
+   z-index: 1;
+   top: 2px;
+   left: 2px;
+   width: 58px;
+   height: 22px;
+   background: #265b86;
+   border-radius: 3px;
+   -webkit-transition: left .15s ease-out;
+   transition: left .15s ease-out
+}
+
+// iOS toggle button
+input.toggle {
+    max-height: 0;
+    max-width: 0;
+    opacity: 0
+}
+
+input.toggle+label {
+    display: inline-block;
+    position: relative;
+    box-shadow: inset 0 0 0 1px #d5d5d5;
+    text-indent: -5000px;
+    height: 25px;
+    width: 55px;
+    border-radius: 15px;
+    margin-left: .2rem
+}
+
+input.toggle+label:after,input.toggle+label:before {
+    content: "";
+    position: absolute;
+    display: block;
+    height: 25px;
+    width: 25px;
+    left: 0;
+    border-radius: 15px;
+    top: 0;
+}
+
+input.toggle+label:before {
+    background: rgba(19,191,17,0);
+    transition: .25s ease-in-out;
+}
+
+input.toggle+label:after {
+    background: #fff;
+    box-shadow: inset 0 0 0 1px rgba(0,0,0,.2),0 2px 4px rgba(0,0,0,.2);
+    transition: .25s ease-in-out;
+}
+
+input.toggle:checked+label:before {
+    width: 55px;
+    background: rgba(19,191,17,1);
+}
+
+input.toggle:checked+label:after {
+    left: 30px;
+    box-shadow: inset 0 0 0 1px rgba(19,191,17,1),0 2px 4px rgba(0,0,0,.2);
+}
+
+.toggleContainer,.toggleContainer>div,.toggleContainer>div>span {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.toggleContainer,.toggleContainer>div {
+    margin-right: .2rem;
+}
+
+.toggleContainer,.toggleContainer>div:last-child {
+    margin-right: 0rem;
+}
