--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -60,7 +60,7 @@ input[type='search'],input[type='text'],input[type='date'],input[type='number'] 
     outline: none;
 }
 
-.search-container,.table-container {
+.search-container,.table-container,.overview-container {
   padding: .2rem;
   margin: .2rem;
   background-color: #FFF;
