--- a/src/style/elements/_btn.scss
+++ b/src/style/elements/_btn.scss
@@ -74,7 +74,7 @@
 .btn-manual {
   padding-left: .8rem;
   background-color: #265b86;
-  background-image: url('./assets/icon-manual.png') !important;
+  background-image: url('./assets/image/icon-manual.png') !important;
   background-repeat: no-repeat;
   background-size: 20%;
   background-position: .2rem center;
