--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -73,3 +73,4 @@ input[type='search'],input[type='text'],input[type='date'],input[type='number'] 
 
 @import "elements/_btn.scss";
 @import "elements/_toast.scss";
+@import "elements/_modal.scss";
