--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,6 +13,27 @@
 .pure-form-aligned .pure-control-group label {
   width: 6em;
 }
+.pure-table {
+  width: 100%;
+  text-align: center;
+  border: 1px solid #EAEAEA;
+  margin-top: .3rem;
+  td, th {
+    border-left: 1px solid #EAEAEA;
+    text-align: center;
+    padding-top: .2rem;
+    padding-bottom: .2rem;
+  }
+  thead {
+    color: #323232;
+    background-color: #F5F7FA;
+    border-bottom: 1px solid #EAEAEA;
+  }
+}
+
+.pure-form-aligned .pure-control-group {
+  margin-bottom: .3rem;
+}
 
 // responsive rem setting
 html {
@@ -65,10 +86,16 @@ input[type='search'],input[type='text'],input[type='date'],input[type='number'] 
 }
 
 .search-container,.table-container,.overview-container {
-  padding: .2rem;
-  margin: .2rem;
+  padding: .3rem;
+  margin: .25rem;
   background-color: #FFF;
   border: 1px solid $border-color;
+}
+
+.no-data {
+  text-align: center;
+  opacity: .8;
+  margin-bottom: 5px;;
 }
 
 @import "elements/_btn.scss";
