--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -35,7 +35,7 @@
 }
 
 .pure-form-aligned .pure-control-group {
-  margin-bottom: .3rem;
+  margin-bottom: .25rem;
 }
 
 // responsive rem setting
@@ -96,7 +96,7 @@ input[type='search'],input[type='text'],input[type='date'],input[type='number'] 
 }
 
 .search-container {
-  padding-bottom: .1rem;
+  padding-bottom: 0;
 }
 
 .no-data {
