--- a/src/style/elements/_text.scss
+++ b/src/style/elements/_text.scss
@@ -12,3 +12,15 @@
 .text-black {
   color: $black;
 }
+
+.text-red {
+  color: #B00019;
+}
+
+.text-green {
+  color: $green-dark;
+}
+
+.text-gray {
+  color: #AAA;
+}
