--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,7 +14,7 @@
   width: 6em;
 }
 .pure-form select {
-  height: 100%;
+  height: auto;
 }
 
 .pure-table {
@@ -114,8 +114,8 @@ input[type='search'],input[type='text'],input[type='date'],input[type='number'] 
     border-radius: 50%;
   }
   &--sm {
-    width: 1rem;
-    height: 1rem;
+    width: .9rem;
+    height: .9rem;
   }
   &--md {
     width: 1.2rem;
