--- a/src/style/elements/_btn.scss
+++ b/src/style/elements/_btn.scss
@@ -19,6 +19,12 @@
         background-image: -webkit-linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));
         background-image: linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));
     }
+    &:disabled {
+      opacity: .4;
+      cursor: not-allowed;
+      box-shadow: none;
+      pointer-events: none;
+    }
 }
 
 // color
