Chart enhancement, Scan page

--- a/src/style/elements/_text.scss
+++ b/src/style/elements/_text.scss
@@ -5,6 +5,10 @@
   color: $orange;
 }
 
+.text-yellow {
+  color: $yellow;
+}
+
 .text-royal {
   color: $purple;
 }
@@ -14,7 +18,7 @@
 }
 
 .text-red {
-  color: #B00019;
+  color: #F25412;
 }
 
 .text-green {
